--- a/generic.html
+++ b/generic.html
@@ -30,11 +30,11 @@
 							<section id="content" class="main">
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 								<h2>JorjiPorgi</h2>
-								<p>Jorji is a red haired dude that streams on twitch, and he's sorta funny? IrohDotW is definitely more hilarious, just go watch him.</p>
+								<p>Jorji is a red haired dude that streams on twitch, and he's sorta funny, mostly chill. IrohDotW is definitely more hilarious, rowdy, and rambunctious.  Go watch him for HYPERS gameplay.</p>
 								<p>Jorji's inspiriation comes from people like Vinny, from Vinesauce, and Jerma985. These two jabronis inspired lil ol jorji to keep chugging and really try and make a comforting community of his own, and so, he did.</p>
 								<h2>IrohDotW</h2>
-								<p>This man loves his Avatar: The Last Airbender. If you talk shit on this TV show, prepare for him to slap you all the way to mars. He is the Co-Owner of The Neat NEETs, and plays a pretty vital role in the community.</p>
-								<h3><b>If you want to become a streamer for us, please fill out this Google form. If we find that you're capable of the job, we'll add you to the "Streamer" role on our Discord, and you'll then be able to notify the entire Discord of when you're going live.<h3></b>
+								<p>This man loves his Avatar: The Last Airbender. If you talk shit on this TV show, prepare for him to slap you all the way to mars. He is the Co-Owner of The Neat NEETs, and plays a pretty vital role in the community, his streams are also pretty fine, but a bit more rowdy than Jorji's tend to be.</p>
+								<h3><b>If you want to become a streamer for us, please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSHCgb_NZ8e_2V1NjGxh7BX2CK0V10ag71OsMs45z_Kam41g/viewform">Google Form</a>. If we find that you're capable of the role(we're not THAT picky, but keep in mind we don't want/need more than 20 odd streamers), we'll add you to the "Streamer" role on our Discord, and you'll then be able to notify the entire Discord of when you're going live.<h3></b>
 							</section>
 
 					</div>
