--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
+<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
 	<head>
 		<title>The Neat NEETS</title>
 		<meta charset="utf-8" />
@@ -20,12 +22,14 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>neatus deletus</h1>
+						<h1>The Neat NEETS</h1>
 						<p>A <a href="https://invite.gg/theneatneets">Discord</a> server built by and for weebs/neets. <a href="https://twitter.com/TheNeatNEETs">@theneatneets</a>.</p>
 					</header>
 
 					<!--twitchembed-->
 					<html>
+					<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
+<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
   <body>
     <!-- Add a placeholder for the Twitch embed -->
     <div id="twitch-embed"></div>
@@ -36,7 +40,7 @@
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 854,
+        width: 1450,
         height: 480,
         channel: "JorjiPorgi"
       });
@@ -78,26 +82,7 @@
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>JorjiPorgi</h2>
-								</header>
-													<!--twitchembed-->
-					<html>
-  <body>
-    <!-- Add a placeholder for the Twitch embed -->
-    <div id="twitch-embed"></div>
-
-    <!-- Load the Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
-    <script type="text/javascript">
-      new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
-        channel: "JorjiPorgi"
-      });
-    </script>
-  </body>
-</html>
+								</header>												
 							</section>
 
 						<!-- Second Section -->
