--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 1450,
+        width: 1195,
         height: 480,
-        channel: "JorjiPorgi"
+        channel: "TheNeatNEETs"
       });
     </script>
   </body>
@@ -74,13 +74,6 @@
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
-							</section>
-
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>JorjiPorgi</h2>
-								</header>												
 							</section>
 
 						<!-- Second Section -->
@@ -123,9 +116,8 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Want to become a streamer in our community?</h2>
+									<p>Please fill out the Google Form found on the About page.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
