--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 					<!--twitchembed-->
 					<html>
-					<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
-<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
+<<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
+<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
   <body>
     <!-- Add a placeholder for the Twitch embed -->
     <div id="twitch-embed"></div>
@@ -50,9 +50,8 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#second">Discord Server</a></li>
+							<li><a href="#cta">Join us as a streamer!</a></li>
 						</ul>
 					</nav>
 
