iframe doesnt work...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="images/icon">
 		<title>The Neat NEETS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -22,12 +23,12 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>The Neat NEETS</h1>
 						<p>A <a href="https://invite.gg/theneatneets">Discord</a> server built by and for weebs/neets. <a href="https://twitter.com/TheNeatNEETs">@theneatneets</a>.</p>
+						<script src="http://gist-it.appspot.com/https://github.com/gerberface/streambadge"></script>
 					</header>
 
 					<!--twitchembed-->
 					<html>
-<<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
-<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
+
   <body>
     <!-- Add a placeholder for the Twitch embed -->
     <div id="twitch-embed"></div>
@@ -38,7 +39,7 @@
     <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
     <script type="text/javascript">
       new Twitch.Embed("twitch-embed", {
-        width: 1195,
+        width: 1450,
         height: 480,
         channel: "TheNeatNEETs"
       });
@@ -78,37 +79,11 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Our Discord server!</h2>
+									<p>Join the Discord to be notified of our streams from any of our streamers.</p>
+									<iframe src="https://discordapp.com/widget?id=489814793759490058&theme=light" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
 								</footer>
 							</section>
 
@@ -116,11 +91,11 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Want to become a streamer in our community?</h2>
-									<p>Please fill out the Google Form found on the About page.</p>
+									<p>Please fill out the Google Form found on the About page, or hit the "Get Started" button.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
+										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdSHCgb_NZ8e_2V1NjGxh7BX2CK0V10ag71OsMs45z_Kam41g/viewform" class="button primary">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
