--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>The Neat NEETS</h1>
 						<p>A <a href="https://invite.gg/theneatneets">Discord</a> server built by and for weebs/neets. <a href="https://twitter.com/TheNeatNEETs">@theneatneets</a>.</p>
-						<script src="http://gist-it.appspot.com/https://github.com/gerberface/streambadge"></script>
 					</header>
 
 					<!--twitchembed-->
@@ -64,7 +63,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>We are mainly a twitch community, focused around our twitch streams.</h2>
+											<h2>We are mainly a Twitch community, focused around our Twitch streams.</h2>
 										</header>
 										<p>As of right now, we're only two people. JorjiPorgi and IrohDotW, however, we don't expect it to stay like this. We want to grow
 										so that we can become a huge community that provides a warm welcome to each and every person that joins. </p>
