--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>The Neat NEETS</h1>
 						<p>A <a href="https://invite.gg/theneatneets">Discord</a> server built by and for weebs/neets. <a href="https://twitter.com/TheNeatNEETs">@theneatneets</a>.</p>
+						<p>See who's live with the badges below! Check out our central Twitch Channel that will serve as an autohost bot to direct you to one of our streamers.</p>
+						<iframe src="http://streambadge.com/twitch/light/JorjiPorgi/" style="border:none;height:4em;width:100%"></iframe>
+						<iframe src="http://streambadge.com/twitch/light/IrohDotW/" style="border:none;height:4em;width:100%"></iframe>
 					</header>
 
 					<!--twitchembed-->
