i commit way too often
lmfao

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<p>As of right now, we're only two people. JorjiPorgi and IrohDotW, however, we don't expect it to stay like this. We want to grow
 										so that we can become a huge community that provides a warm welcome to each and every person that joins. </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="about.html" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -98,7 +98,7 @@
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdSHCgb_NZ8e_2V1NjGxh7BX2CK0V10ag71OsMs45z_Kam41g/viewform" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="about.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
